--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,14 +4,28 @@ Title: JE personal package
 Version: 0.1.0
 Author: James Edwards <jamese1326+gh@gmail.com> 
 Maintainer: James Edwards <jamese1326+gh@gmail.com>
-Description: A collection of functions for general use that I have written.
+Description: A collection of miscellaneous data science functions that I have written.
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.0
 Suggests: 
-    binom,
-    ranger,
-    ROCR,
     tidyverse,
-    testthat (>= 2.1.0)
+    testthat (>= 2.1.0),
+    DataExplorer,
+    data.table
+Imports: 
+    magrittr,
+    dplyr,
+    tibble,
+    forcats,
+    ggplot2,
+    knitr,
+    lubridate,
+    stringr,
+    tidyr,
+    kableExtra,
+    purrr,
+    ranger,
+    binom,
+    ROCR
