--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(count_string)
 export(count_unique)
 export(diff_days)
 export(factor_to_numeric)
+export(fd_cols)
 export(find_similar)
 export(glmnet_to_table)
 export(ilogit)
