--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(compare_sets)
 export(compare_vars)
 export(compare_vecs)
 export(convert_date)
+export(count2)
 export(count_at)
 export(count_levels)
 export(count_matches)
