Delete plot_nas() and plot_missing2() and remove @import ggplot
Closes #3.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,8 +34,6 @@ export(min_n)
 export(mode_stat)
 export(my_kable)
 export(object_size_all)
-export(plot_missing2)
-export(plot_nas)
 export(prinf)
 export(prop_ci)
 export(rang_mtry)
@@ -45,6 +43,6 @@ export(roc_cut)
 export(roc_plot)
 export(split_kable)
 export(var_summary)
-import(ggplot2)
+importFrom(ggplot2,aes)
 importFrom(magrittr,"%>%")
 importFrom(rlang,":=")
