--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,10 +10,7 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
 Suggests: 
-    tidyverse,
-    testthat (>= 2.1.0),
-    DataExplorer,
-    data.table
+    testthat (>= 2.1.0)
 Imports: 
     magrittr,
     dplyr,
