--- a/NAMESPACE
+++ b/NAMESPACE
@@ -42,6 +42,7 @@ export(rang_roc_cut)
 export(roc_cut)
 export(roc_plot)
 export(split_kable)
+export(string_missing)
 export(var_summary)
 importFrom(ggplot2,aes)
 importFrom(magrittr,"%>%")
