--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,6 +33,7 @@ export(max_n)
 export(min_n)
 export(mode_stat)
 export(my_kable)
+export(need)
 export(object_size_all)
 export(prinf)
 export(prop_ci)
