--- a/NAMESPACE
+++ b/NAMESPACE
@@ -42,6 +42,7 @@ export(rang_oob_err)
 export(rang_roc_cut)
 export(roc_cut)
 export(roc_plot)
+export(save_check)
 export(split_kable)
 export(string_missing)
 export(var_summary)
