Add dir_contents(), dir_summary() and dir_size()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,9 @@ export(count_over)
 export(count_string)
 export(count_unique)
 export(diff_days)
+export(dir_contents)
+export(dir_files)
+export(dir_size)
 export(factor_to_numeric)
 export(fd_cols)
 export(find_similar)
