--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,15 +40,12 @@ export(need)
 export(object_size_all)
 export(prinf)
 export(prop_ci)
-export(rang_mtry)
-export(rang_oob_err)
-export(rang_roc_cut)
-export(roc_cut)
-export(roc_plot)
 export(save_check)
 export(split_kable)
 export(string_missing)
 export(var_summary)
+importFrom(dplyr,if_else)
 importFrom(ggplot2,aes)
 importFrom(magrittr,"%>%")
 importFrom(rlang,":=")
+importFrom(rlang,.data)
