--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,7 +15,7 @@ export(count_matches2)
 export(count_n)
 export(count_nas)
 export(count_over)
-export(count_string)
+export(count_pattern)
 export(count_unique)
 export(diff_days)
 export(dir_contents)
