--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,8 @@ export(count_pattern)
 export(count_unique)
 export(diff_days)
 export(dir_contents)
+export(dir_count_dirs)
+export(dir_count_files)
 export(dir_files)
 export(dir_size)
 export(factor_to_numeric)
