--- a/NAMESPACE
+++ b/NAMESPACE
@@ -44,6 +44,7 @@ export(save_check)
 export(split_kable)
 export(string_missing)
 export(var_summary)
+export(vcount)
 importFrom(dplyr,if_else)
 importFrom(ggplot2,aes)
 importFrom(magrittr,"%>%")
