--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,6 +36,8 @@ export(max_n)
 export(min_n)
 export(mode_stat)
 export(my_kable)
+export(na_if_any)
+export(na_if_string)
 export(need)
 export(object_size_all)
 export(prinf)
