Add extend_vector() and rewrite max_n() and min_n()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ export(dir_count_dirs)
 export(dir_count_files)
 export(dir_files)
 export(dir_size)
+export(extend_vector)
 export(factor_to_numeric)
 export(fd_cols)
 export(find_similar)
