Add aliases for count2 and vcount

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,8 @@ export(count_nas)
 export(count_over)
 export(count_pattern)
 export(count_unique)
+export(countp)
+export(countv)
 export(diff_days)
 export(dir_contents)
 export(dir_count_dirs)
